2008-09-14 Jesse Kornblum <md5deep@jessekornblum.com>

	* Experimenting with new time estimation calculation
	

2008-08-13 Jesse Kornblum <md5deep@jessekornblum.com>

	* Updated contact email address to research@jessekornblum.com.
	  Reconfigured.

	* Applied patch 2026326 to fix VPATH build for manpages.

	
2008-07-27 Jesse Kornblum <md5deep@jessekornblum.com>

	* Reconfigured with latest tools

	
2008-07-20 Jesse Kornblum <md5deep@jessekornblum.com>

	* Removed debugging code accidently left in files.c:
	  find_rigid_hash function.

2008-07-18 Jesse Kornblum <md5deep@jessekornblum.com>

	* Updated documentation to reflect Cygwin Ports support.

	* Modified file_type function to record the file size of 
	  each file processed. This should eliminate the need to
	  call stat again or the ioctl functions in hash.c and
	  hopefully speed up the program.

	* Added timestamp to the output for size mode per Feature
	  Request 2014686. This should be the creation time on 
	  Win32, change time for all other operating systems.

	* Removed 'Experimental cast' tags from SHA256 and Tiger
	  hashing code. They appear to be working.

	* In response to bug 2022302, updated time estimate display
	  to handle large time values, including those more than
	  one day.


2008-07-04 Jesse Kornblum <md5deep@jessekornblum.com>

	* Added -I mode to display filenames with asterisks for
	  hashes when size is above threshold. Compliments -i mode.
	

2008-07-04 Jesse Kornblum <md5deep@jessekornblum.com>

	* Removed SF Community Choice Awards from web page. 
	  The nominations are closed.

	* Added size mode, -i, to only process files smaller than
	  a given size threshold. Reused code from piecewise mode
	  to parse user input. Added to md5deep and hashdeep.
	  Added to SF at Feature Request 2010771.

	
2008-05-17 Jesse Kornblum <md5deep@jessekornblum.com>

	* Applied patch 1961973 to fix man page installation.
	

2008-04-18 Jesse Kornblum <md5deep@jessekornblum.com>
